--- a/backend/ErasXchange/src/main/resources/application.properties
+++ b/backend/ErasXchange/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-server.contextPath=/api
+logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.open-in-view=true
+server.error.include-message=always
+
+spring.jpa.database=postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=admin
+spring.datasource.password=passwd
