--- a/backend/ErasXchange/src/main/resources/application.properties
+++ b/backend/ErasXchange/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 server.error.include-message=always
 
