--- a/backend/ErasXchange/src/main/resources/application.properties
+++ b/backend/ErasXchange/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=true
 server.error.include-message=always
 
@@ -8,3 +8,8 @@ spring.jpa.database=postgresql
 spring.datasource.url=jdbc:postgresql://localhost:5400/postgres
 spring.datasource.username=admin
 spring.datasource.password=passwd
+
+#application-specific string used to encrypt tokens
+security.jwt.token.secret-key=secret-key-for-encryption
+# token valid for 10 minutes
+security.jwt.token.expiration=600000
