--- a/backend/ErasXchange/pom.xml
+++ b/backend/ErasXchange/pom.xml
@@ -62,7 +62,16 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.13</version>
+        </dependency>
     </dependencies>
 
     <build>
