Add Excel parsing

--- a/backend/ErasXchange/src/main/resources/application.properties
+++ b/backend/ErasXchange/src/main/resources/application.properties
@@ -13,3 +13,22 @@ spring.datasource.password=passwd
 security.jwt.token.secret-key=secret-key-for-encryption
 # token valid for 10 minutes
 security.jwt.token.expiration=600000
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=aliemirguzey@gmail.com
+spring.mail.password=Stubborn-Obvious-Chevy
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
+
+file.upload-dir=/Users/aliem/uploads
