--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
+    "jwt-decode": "^3.1.2",
     "mui-radio-group": "^1.0.5",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
